# bonus-engine

./: .gitignore  Dockerfile  README.md  docker-compose.yml  init_demo_dataset.py  main.py  pyproject.toml
app/: __init__.py
app/api/: __init__.py  bonus.py  exception_handlers.py
app/core/: __init__.py  config.py
app/db/: __init__.py  mongo.py
app/dependencies/: get_bonus_strategy_service.py
app/domain/: __init__.py
app/domain/conditions/: __init__.py  condition_context.py  factory.py  register.py
app/domain/conditions/implementations/: customer_status.py  holiday_weekend.py  is_holiday.py
app/domain/formulas/: __init__.py  factory.py  register.py
app/domain/formulas/implementations/: fixed_per_amount.py  multiplier.py  percent.py
app/domain/rule/: rule.py
app/domain/strategy/: strategy.py
app/exceptions/: __init__.py  base.py  custom_exceptions.py
app/infrastructure/: mongo_unit_of_work.py
app/infrastructure/models/: __init__.py  common.py  holiday_model.py  rule_model.py  strategy_model.py
app/infrastructure/repositories/: holiday_repository.py  rule_repository.py  strategy_repository.py
app/interfaces/: __init__.py  condition_interface.py  formula_interface.py  holiday_repository_interface.py  rule_interface.py  rule_repository_interface.py  strategy_interface.py  strategy_repository_interface.py  unit_of_work_interface.py
app/schemas/: bonus_input.py
app/services/: bonus_strategy_service.py
